Fix navbar look on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -447,16 +447,15 @@ main {
 \*-----------------------------------*/
 
 .navbar {
-  position: fixed;
-  bottom: 0;
-  left: 0;
   width: 100%;
   background: hsla(240, 1%, 17%, 0.75);
   backdrop-filter: blur(10px);
   border: 1px solid var(--jet);
-  border-radius: 12px 12px 0 0;
+  border-radius: 12px 12px 12px 12px;
   box-shadow: var(--shadow-2);
   z-index: 5;
+  margin-bottom: 20px;
+
 }
 
 .navbar-list {
